# l40s-llm-bench

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
configs/: benchmark_matrix.yaml  fake_server_matrix.yaml  generated_workload_matrix.yaml  hardware.example.yaml  models.yaml  workload_profiles.yaml
docs/: artifact-review-rubric.md  backend-decision-llama-cpp.md  benchmark_landscape.md  ci.md  codespaces.md  community-feedback.md  contributor-self-check.md  dcgm-metrics.md  error_taxonomy.md  evidence-bundle-checklist.md  evidence_bundle_quickstart.md  fake_server_validation.md  feedback-request-template.md  feedback-triage-policy.md  first-user-smoke-test.md  first_run_troubleshooting.md  gpu-metrics.md  jsonl_compatibility.md  limitations.md  maintainer_ops_index.md  methodology.md  project-rationale.md  regression_comparison.md  release-checklist.md  reproducibility-evidence-bundle.md  result-schema.md  result_review_checklist.md  result_review_examples.md  result_review_quickstart.md  result_review_response_templates.md  result_submission_example.md  result_submission_starter.md  run_manifest.md  smoke_feedback_response_templates.md  smoke_feedback_review.md  smoke_feedback_starter.md  ten_minute_smoke_run.md  vllm-l40s-smoke-run.md  workload_profile_report.md  workload_profiles.md
l40s_bench/: __init__.py  compare.py  compat.py  config.py  errors.py  io.py  manifest.py  openai_stream.py  (+4 more)
(+117 files in other folders)
