[project]
name = "l40s-llm-bench"
version = "0.1.0"
description = "Minimal scaffold for reproducible LLM inference benchmark experiments."
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
